buildscript {
    repositories {
        google()
        mavenCentral()
    }
}

plugins {
    id 'maven-publish'
    id 'java'
    id "com.github.johnrengelman.shadow" version "7.1.1"
}

allprojects {
    group 'me.realized'
    version '3.5.0'
}

subprojects {
    sourceCompatibility = 1.17
    targetCompatibility = 1.17

    repositories {
        mavenCentral()

        maven {
            name 'bungeecord-repo'
            url 'https://oss.sonatype.org/content/repositories/snapshots'
        }

        maven {
            name 'spigot-repo'
            url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
        }

        maven {
            name 'mvdw-repo'
            url 'https://repo.mvdw-software.com/content/groups/public/'
        }

        maven {
            name 'clip-repo'
            url 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
        }

        maven {
            name 'sk89q-repo'
            url 'https://maven.sk89q.com/repo/'
        }

        maven {
            name 'inventive-repo'
            url 'https://repo.inventivetalent.org/content/groups/public/'
        }

        maven {
            name 'codemc-repo'
            url 'https://repo.codemc.io/repository/maven-public/'
        }

        maven {
            name 'essentials-releases'
            url 'https://repo.essentialsx.net/releases/'
        }

        maven {
            name 'paper-repo'
            url 'https://papermc.io/repo/repository/maven-public/'
        }

        maven {
            name 'CodeMC'
            url 'https://repo.codemc.org/repository/maven-public/'
        }

        maven {
            name 'jitpack'
            url 'https://jitpack.io'
        }

        maven {
            name 'sirblobman-public'
            url 'https://nexus.sirblobman.xyz/repository/public/'
        }

        maven {
            name 'placeholderapi'
            url 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
        }

        maven {
            name 'intellectualsites'
            url 'https://mvn.intellectualsites.com/content/repositories/releases/'
        }

        flatDir {
            dirs "$rootDir/libs/"
        }
    }
}
